@@ -1,3 +1,7 @@
+shmuel 2025-08-18 21:31:53+03:00 - build 886
+
+1. LuaFAR: refactoring.
+
 shmuel 2025-07-26 20:39:15+03:00 - build 885
 
 1. LuaFAR: minor refactoring.
